# OS

./: README.md
lab_01/V1/: CMakeLists.txt  employee.h  main.cpp  reporter.cpp  test.cpp
lab_01/V2/: CMakeLists.txt  creator.cpp  main.cpp  reporter.cpp  test.cpp
lab_02/v1/: CMakeLists.txt  main.cpp  unit.cpp
lab_02/v2/: CMakeLists.txt  function.cpp  function.h  main.cpp  unit.cpp
lab_03/v1/: CMakeLists.txt  function.cpp
lab_03/v2/: CMakeLists.txt  function.h  main.cpp  unit.cpp
lab_04/v1/: CMakeLists.txt  Receiver.cpp  Sender.cpp  unit.cpp
lab_04/v2/: CMakeLists.txt  Receiver.cpp  Sender.cpp
lab_05/v1/: Client.cpp  Server.cpp
lab_05/v2/: CMakeLists.txt  Client.cpp  Server.cpp
Коллоквиум 1/: README.md
